# gseq

./: Cargo.toml  README.md  run.sh
res/eye/: ball_coral.mtl  ball_cube.mtl  ball_pikes.mtl  ball_pikes2.mtl  cage.mtl  iris1.mtl  iris2.mtl  iris3.mtl  outside.mtl  pupil.mtl  pupil_cage.mtl  pupil_ring.mtl  torus1.mtl  torus2.mtl  torus3.mtl  torus_inside2.mtl  torus_outside.mtl  wireframe.mtl
res/eye2/: iris_3.mtl  outside.mtl  outside_ball_coral.mtl  outside_ball_coral_1.mtl  outside_ball_cube.mtl  outside_ball_cube_1.mtl  outside_ball_piek.mtl  outside_ball_piek_1.mtl  outside_ball_piek_2.mtl  outside_ball_piek_3.mtl  outside_copie.mtl  pupil.mtl  torus_1.mtl  torus_2.mtl  torus_outside.mtl  wireframe.mtl
shader/: 2d_noise_1.wgsl  2d_transparent.wgsl  post.wgsl  wallpaper_noise_0.wgsl
shader/vs_0/: 2d_full.wgsl  2d_letter.wgsl  2d_logo.wgsl  2d_noise.wgsl  2d_octopus.wgsl  2d_transparent.wgsl  3d.wgsl  3d_noise_geometry.wgsl  post.wgsl  post_0.wgsl  post_1.wgsl  wallpaper_noise_0.wgsl  wallpaper_noise_1.wgsl
src/: action.rs  audio.rs  camera.rs  color.rs  display.rs  fft.rs  group.rs  instance.rs  item.rs  led.rs  lib.rs  light.rs  main.rs  model.rs  pipeline.rs  post.wgsl  shader.wgsl  texture.rs  transform.rs  vs_0.rs
