[package]
name = "gseq"
version = "0.1.0"
edition = "2021"


[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.14"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
# algebra library
cgmath = "0.18"
# Load the .obj
tobj = "3.2"
cpal = "0.15.0"
realfft = "3.2.0"

