[package]
name = "gseq"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/jeudine/gseq"
authors = ["Julien Eudine <julien@eudine.fr>", "Marius Debussche <marius.debussche@gmail.com>"]
categories = ["rendering", "multimedia","graphics" ]
description = "A realtime visual performance program using the audio input to animate the visuals."
include = ["/src", "/shader", "/models", "/image", "LICENSE"]

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.14"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
# Algebra library
cgmath = "0.18"
# Load the .obj
tobj = "4.0"
# Audio
cpal = "0.15.0"
realfft = "3.2.0"
rand = "0.8.5"
promptly = "0.3.1"
crossterm = "0.27.0"
# Texture images
image = "0.24.7"
# Error handling
thiserror = "1.0.50"
fs-err = "2.11.0"

[profile.release]
lto = true
codegen-units = 1
